# webtronics

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: authentication.py  config.py  database.py  logger.py  main.py  prestart.sh  wait_for_postgres.sh
app/cache/: backends.py  middlewares.py
app/crud/: post.py  user.py
app/migrations/: env.py
app/migrations/versions/: 21fd088be745_initial.py  9bf0debe5ca3_initial.py  fa17925efe3a_initial.py
app/models/: posts.py  users.py
app/routes/: __init__.py  auth.py  posts.py  utils.py
app/schemas/: auth.py  posts.py  users.py
compose/fastapi/: Dockerfile
