[tool.poetry]
name = "webtronics-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
repository = "https://github.com/SuperLalka/webtronics-test"

[tool.poetry.dependencies]
python = "^3.9"
poetry = "1.5.1"
uvicorn = {extras = ["standard"], version = "0.23.1"}
fastapi = "0.100.0"
psycopg2-binary = "2.9.6"
asyncpg = "0.28.0"
SQLAlchemy = "2.0.19"
alembic = "1.11.1"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
fastapi-jwt-auth = {extras = ["asymmetric"], version = "0.5.0"}
requests = "2.31.0"
pydantic = "1.10.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
